--- a/docs/generacionInstalador/README
+++ b/docs/generacionInstalador/README
@@ -2,13 +2,14 @@ Este es el README de la version 0.9 de MERAN publicada el 26/10/2012.
 
 Para mas información visite el sitio del proyecto http://meran.unlp.edu.ar.
 
-Con este instalador se distribuye un script automatico de instalación para utilizarlo con GNU/Linux Debian 6 con todos los módulos precompilados para Perl 5.10.4.
-Igualmente distribuimos el codigo fuente pero tal vez sea necesario que instale las dependencias de Meran en forma manual dependiendo de la plataforma en que lo instale.
+Con este instalador se distribuye un script automatico de instalación para utilizarlo con GNU/Linux Debian 6 con todos los módulos precompilados para Perl 5.10.1.
+Igualmente distribuimos el código fuente pero tal vez sea necesario que instale las dependencias de Meran en forma manual dependiendo de la plataforma en que lo instale.
 
-##Instalar en Debian 6.0###
+##Instalar automatico, solo para Debian 6.0 o derivados como Lihuen GNU/Linux###
 
 1- Baje las fuentes del sistema desde el sitio del proyecto http://meran.unlp.edu.ar
-2- Como usuario root ejecute el script de instalación pasando un identificador que se utilizará en el sitio:
+2- Descomprimir el tar.gz que se baja y luego
+3- Como usuario root ejecute el script de instalación pasando un identificador que se utilizará en el sitio:
 	# bash docs/instalador/instalar.sh -i identificador
 
 3- Siga paso a paso el proceso de instalación
@@ -143,4 +144,15 @@ Crypt::Rijndael
 	Los permisos que se tienen que definir son para el usuario que se defina en la configuración de Meran en la variable user, userOPAC,userINTRA y userDEVELOP los cuales se van a identificar usando las passwords definidas en la variables password, passOPAC, passINTRA y passDEVELOP respectivamente. Aunque no es recomendable podría ser el mismo usuario y password para todas las variables.
 	Además debe dar permisos al usuario y password definidos en el sphinx.conf para que puede hacer select sólo sobre la tabla indice_busqueda.
 
+##Configuración de crons del sistema
+	Hay que configurar las tareas que se necesitan que se ejecuten regularmente.
+	Ver la subrutina generarCrons del archivo instalar.sh
 
+##Generación de directorios para logs
+	De acuerdo a lo que hayan configurado en los Virtualhost hay que generar los archivos de logs y darle permiso de escritura al usuario que corresponda
+
+##Generación de directorios para los indices de Sphinx
+	De acuerdo a la configuración que haya realizado para sphinx debe generar estos directorios
+
+##Configurar Logrotate 
+	En docs/instalador/logrotate.d-meran tiene un template de como configurarlo
